k8s/celery-daily-demand-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-daily-demand-worker
  namespace: eda-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-daily-demand
  template:
    metadata:
      labels:
        app: celery-daily-demand
    spec:
      containers:
        - name: celery-daily-demand
          image: eda-fastapi:latest
          imagePullPolicy: IfNotPresent

          command: ["celery"]
          args:
            - -A
            - FG.tasks.daily_demand_tasks
            - worker
            - -l
            - info
            - -Q
            - daily_demand_queue
            - --concurrency=2
            - --prefetch-multiplier=1

          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
