k8s/mlflow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: eda-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:v2.13.0
          imagePullPolicy: IfNotPresent

          command: ["mlflow"]
          args:
            - server
            - --backend-store-uri
            - sqlite:///mlflow.db
            - --default-artifact-root
            - /mlruns
            - --host
            - 0.0.0.0
            - --port
            - "5000"

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
