k8s/mlflow-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: eda-namespace
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
