k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: eda-namespace
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
